# lektor-ng

./: .gitignore  FORK.TXT  pyproject.toml
.github/workflows/: main.yml
licenses/: LICENSE.new
src/lektor_ng/: __init__.py  assets.py  build_programs.py  builder.py  cli.py  cli_utils.py  compat.py  context.py  databags.py  datamodel.py  db.py  devcli.py  devserver.py  editor.py  filecontents.py  i18n.py  inifile.py  pluginsystem.py  project.py  publisher.py  quickstart.py  sourceobj.py  sourcesearch.py  version.py  videotools.py  watcher.py
src/lektor_ng/admin/: context.py  webui.py
src/lektor_ng/admin/modules/: api.py  livereload.py  serve.py
src/lektor_ng/admin/static/: app.css  app.css.map  app.js  app.js.map  livereload-worker.js  livereload-worker.js.map  tooldrawer.js  tooldrawer.js.map
src/lektor_ng/environment/: __init__.py  config.py
src/lektor_ng/markdown/: __init__.py  controller.py  mistune0.py  mistune2.py
src/lektor_ng/quickstart-templates/plugin/: @plugin_module@.py.in
src/lektor_ng/types/: __init__.py  base.py  fake.py  flow.py  formats.py  multi.py  primitives.py  special.py
support/: builder.py  rename.py
tests/: conftest.py  test_assets.py  test_build_frontend.py  test_builder.py  test_buildfailures.py  test_cli.py  test_cli_utils.py  test_compat.py  test_config.py  test_datamodel.py  test_db.py  test_deploy.py  test_devcli.py  test_editor.py  test_environment.py  test_filecontents.py  test_i18n.py  test_imports.py  test_markdown.py  test_packages.py  test_pluginsystem.py  test_prev_next_sibling.py  test_project.py  test_publisher.py  test_quickstart.py  test_reporter.py  test_themes.py  test_tree.py  test_types.py  test_unicode.py  test_urls.py  test_utils.py  test_videotools.py  test_watcher.py
tests/admin/: test_api.py  test_dash.py  test_serve.py  test_webui.py
tests/imagetools/: test_exif.py  test_image_info.py  test_imagetools.py  test_thumbnail.py
tests/pep660-dummy-plugin/: lektor_dummy_plugin.py
